apps/kiali/base/kiali-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: kiali
spec:
  hosts:
  - "kiali.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
