apps/kiali/base/authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kiali-authz-allowip
  namespace: kiali-cr
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST"]
    when:
      - key: 'request.headers[x-envoy-external-address]'
        values:
        - 94.62.74.120  # home
